src/styles/styles.scss
@font-face {
	font-family: ACaslonPro;
	src: url("../fonts/ACaslonPro-Regular.otf") format("opentype");
}

@font-face {
	font-family: Springville;
	src: url("../fonts/Springville-Regular3.otf") format("opentype");
}

body {
	font-family: 'ACaslonPro';
	margin: auto;
	min-width: 320px;
}

.header {
	display: inline-flex;
	height: 120px;
	position: fixed;
	padding-left: 8%;
	padding-right: 8%;
	z-index: 1;
	background-color: white;
	width: -webkit-fill-available;
	font-family: 'Arial';
	color: black;

	img {
		height: 36px;
		position: relative;
		top: 50%;
		-ms-transform: translateY(-50%);
		transform: translateY(-50%);
	}

	button {
		position: relative;
		font-size: 11px;
		background-color: white;
		border: white;
		cursor: pointer;
		display: flex;
    align-items: center;
		margin-right: 10px;
		color: black;

		&.loginButton {
			opacity: 0.65;
			margin-right: 0px;
		}
	}

	div {
		position: relative;
		font-size: 11px;
		width: 100%;
		display: flex;
    justify-content: right;
    align-items: center;
    margin-top: 2px;
		margin-right: 14px;
		opacity: 0.65;
	}

	.sandwich {
		height: 25px;
		width: 25px;
		margin-left: 10px;
    margin-top: 47px;

		.lines {
			width: 20px;
			height: 0.5px;
			background-color: black;
			margin: 6px 0;
			position: absolute;
			opacity: 1;
			color: black;
		}
		.lines:nth-child(1) {
			margin-top: 18px;
		}
		.lines:nth-child(2) {
			margin-bottom: 18px;
		}
	}
}

.hero {
	position: relative;
	top: 120px;
	background-color: gray;
	color: white;
	max-width: 1440px;
	margin: auto;

	.shade {
		width: 100%;
		height: 580px;
		background: rgba(0,0,0,0.4);
		position: absolute;
		top: 0;
		left: 0;
	}

	.outerLayer {
		width: 100%;
		height: 580px;
		//background: rgba(0,0,0,0.4);
		position: absolute;
		top: 0;
		left: 0;
		z-index: 1;
	}

	.heroImage {
		display: none;
	}

	.heroImage.active {
		display: flex;
		background-size: cover;
    background-position: center center;
    height: 580px;
	}

	.heroText {
		display: inline-grid;
		width: 73%;
		position: absolute;
		bottom: 20%;
		left: 12%;
		color: white;

		.heroTitle {
			font-size: 58px;
			font-family: 'Springville';
			line-height: 58px;
		}

		.heroDate {
			font-size: 32px;
		}

		.heroSubtitle {
			font-size: 18px;
			width: 80%;
			line-height: 24px;
			width: 458px;
		}
	}

	ol {
		position: absolute;
    text-align: center;
    width: 100%;
		padding: 0px;
		margin-top: 6px;
		
		li {
			cursor: pointer;
			margin: 5px 10px;
			display: -webkit-inline-box;
			border-radius: 50%;
			width: 10px;
			height: 10px;
			background: #f2f2f2;
		}

		li.activeThumbnail {
			background: #d9d9d9;
		}
	}
}

.masonryGrid {
	position: relative;
	top: 120px;
	margin-top: 90px;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	padding-right: 5%;
	padding-left: 5%;
  align-items: flex-start;

	.cardColumn {
		display: grid;

		.card {
			display: grid;
			margin: 0 auto;
			max-width: calc(100vw * 2/7);
			margin-bottom: 40px;

			.cardImage {
				width: calc(100vw * 2/7 - 50px);
    		padding: 15px;
				max-width: 400px;
			}

			.cardDate {
				font-family: 'Arial';
				font-size: 11px;
				padding: 15px;
				padding-bottom: 10px;
				padding-top: 30px;
				width: calc(100vw * 2/7 - 50px);
				color: black;
				opacity: 0.53;
				max-width: 400px;
			}

			.cardTitle {
				font-family: 'Springville';
				font-size: 50px;
				line-height: 58px;
				width: calc(100vw * 2/7 - 50px);
    		padding: 15px;
				padding-bottom: 6px;
				max-width: 400px;

				&:hover {
					text-underline-offset: 3px;
    			text-decoration: underline;
					text-decoration-thickness: 2.5px;
					cursor: pointer;
				}
			}

			.cardAuthor {
				width: calc(100vw * 2/7 - 50px);
    		padding: 15px;
				padding-bottom: 50px;
				font-size: 14px;
				opacity: 0.67;
				max-width: 400px;
				border-bottom: 1px solid #cccccc;
				padding-left: 0px;
				padding-right: 0px;
				margin-right: 15px;
				margin-left: 15px;
			}
		}
	}
}

.footer {
	top: 100px;
	position: relative;
	padding-top: 60px;
	padding-bottom: 80px;
	text-align: center;

	.newsletter {
		font-size: 18px;
		padding-bottom: 20px;
		opacity: 0.72;
	}

	.emailInput {
		height: 30px;
		width: 242px;
		padding-top: 4px;
		padding-bottom: 0px;
		border: 1px solid black;
		padding-left: 18px;
		font-family: 'ACaslonPro';
		font-size: 15px;
		
		&::placeholder {
			color: black;
			opacity: 0.6;
		}
	}

	.emailButton {
		height: 36px;
    width: 110px;
    background: black;
		border: none;
		color: white;
		padding-top: 4px;
		font-family: 'ACaslonPro';
		font-size: 16px;
		cursor: pointer;
		-webkit-appearance: none;
		-webkit-border-radius: 0; 
		border-radius: 0;
	}
	
	.socials {
		font-size: 11px;
		font-family: 'Arial';
		padding-top: 50px;
		
		&:before {
			content: '\00A9'
		}

		.hr {
			border-bottom: 1px solid black;
			width: 12px;
			margin-bottom: 2px;
			display: inline-block;
		}

		.socialText {
			text-decoration: underline;
			cursor: pointer;
		}
	}
}

/* Desktop */
@media only screen and (min-width: 1440px) {
	.heroText {
		bottom: 20%;
		left: 200px;
	}
}

@media only screen and (max-width: 1440px) {
	.masonryGrid {
		.cardColumn {
			.card {
				.cardTitle {
					font-size: 40px;
					line-height: 40px;
				}
			}
		}
	}
}

/* Tablet */
@media only screen and (max-width: 1024px) {
	.masonryGrid {
		grid-template-columns: 1fr 1fr;
		padding-right: 30px;
		padding-left: 30px;
		grid-gap: 30px;
		
		.cardColumn {
			.card {
				width: calc(100vw * 3/7);
				max-width: none;

				.cardImage {
					width: calc(100vw * 3/7);
					padding: 0px;
					max-width: none;
				}

				.cardDate {
					width: calc(100vw * 3/7);
					padding-left: 0px;
					padding-right: 0px;
					max-width: none;
				}

				.cardTitle {
					width: calc(100vw * 3/7);
					padding-left: 0px;
					padding-right: 0px;
					max-width: none;
				}

				.cardAuthor {
					width: calc(100vw * 3/7);
					margin-left: 0px;
					margin-right: 0px;
					max-width: none;
					padding-bottom: 40px;
				}
			}
		}
	}
}

/* Small Tablet */

@media only screen and (max-width: 768px) {
	.hero {
		.heroText {
			
			.heroTitle {
				font-size: 36px;
				line-height: 36px;
			}
			
			.heroDate {
				font-size: 18px;
			}
			
			.heroSubtitle {
				font-size: 12px;
				line-height: 14px;
				width: 300px;
			}
		}
	}

	.masonryGrid {
		padding-right: 15px;
    padding-left: 15px;
    grid-gap: 15px;
	}
}

@media only screen and (max-width: 773.33px) {
	.hero {
		.heroImage.active {
			display: block;
			height: calc(100vw * 3 / 4);
		}

		.shade {
			height: calc(100vw * 3 / 4);
		}

		.outerLayer {
			height: calc(100vw * 3 / 4);
		}
	}
}

/* Mobile */
@media only screen and (max-width: 480px) {
	.header {
		display: inline-flex;
		height: 50px;
		position: fixed;
		padding-left: 5%;
		padding-right: 5%;
		z-index: 1;
		background-color: white;
		width: -webkit-fill-available;

		img {
			height: 24px;
		}

		.sandwich {
			margin-top: 12px;
		}
	}

	.hero {
		position: relative;
		top: 50px;

		.heroImage.active {
			display: block;
			height: calc(100vw * 3 / 4);
		}

		.heroText {
			display: inline-grid;
			width: 78%;
			position: absolute;
			bottom: 8%;
			left: 12%;
			color: white;
	
			.heroTitle {
				font-size: 36px;
				font-family: 'Springville';
				line-height: 36px;
			}
	
			.heroDate {
				font-size: 18px;
			}
	
			.heroSubtitle {
				font-size: 12px;
				width: 260px;
				line-height: 14px;
			}
		}
	}

	.masonryGrid {
		top:50px;
		grid-template-columns: 1fr;
		padding-right: 40px;
		padding-left: 40px;

		.cardColumn {
			.card {
				width: 100%;
				
				.cardImage {
					width: 100%;
				}
				
				.cardDate {
					width: 100%;
				}

				.cardTitle {
					width: 100%;
				}

				.cardAuthor {
					width: 100%;
				}
			}
		}
	}

	.footer {
		top: 50px;
		padding-top: 20px;

		.emailButton {
			width: 266px;
			margin-top: 10px;
		}
	}

}

@-moz-document url-prefix() {
	.header {
		width: -moz-available;
	}

	.footer {
		.emailButton {
			padding-top: 6px;
		}
	}
}

/* Safari 11+ */
@media not all and (min-resolution:.001dpcm)
{ @supports (-webkit-appearance:none) and (stroke-color:transparent) {
	.header {
		div {
			display: grid;
		}

		.sandwich {
			margin-top: 40px;
	
			.lines {
				height: 1px;
				margin: 2px;
			}

			.lines:nth-child(1) {
				margin-top: 14px;
			}

			.lines:nth-child(2) {
				margin-top: 8px;
			}
		}
	}

	.footer {
		.emailButton {
			padding-top: 6px;
		}
	}

	@media only screen and (max-width: 480px) {
		.header {
			.sandwich {
				margin-top: 5px;
			}
		}
	}
}}

/* Safari 10.1 */
@media not all and (min-resolution:.001dpcm){ 
@supports (-webkit-appearance:none) and (not (stroke-color:transparent)) {
	.header {
		div {
			display: grid;
		}

		.sandwich {
			margin-top: 40px;
	
			.lines {
				height: 1px;
				margin: 2px;
			}

			.lines:nth-child(1) {
				margin-top: 14px;
			}

			.lines:nth-child(2) {
				margin-top: 8px;
			}
		}
	}

	.footer {
		.emailButton {
			padding-top: 6px;
		}
	}

	@media only screen and (max-width: 480px) {
		.header {
			.sandwich {
				margin-top: 5px;
			}
		}
	}
}}

